--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <goals>install</goals>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/wtflian/sfg-pet-clinic.git</developerConnection>
+    </scm>
 </project>
